--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   supabase_flutter: ^2.12.0
   image_picker: ^1.0.7
+  crop_your_image: ^2.0.0
 
 dev_dependencies:
   flutter_test:
