--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   supabase_flutter: ^2.12.0
   image_picker: ^1.0.7
   crop_your_image: ^2.0.0
+  intl: ^0.20.2
 
   # UI biar mirip Figma
   flutter_svg: ^2.0.10
